--- a/style.css
+++ b/style.css
@@ -13,6 +13,24 @@
 
 }
 
+/* Hover States */
+.btn-primary:hover{
+  background: hsla(171, 66%, 44%, 0.7);
+  box-shadow: 0 5px 0 hsl(171, 66%, 35%, 0.7),
+              0 10px 20px hsla(171, 66%, 44%, 0.4);
+}
+
+.btn-secondary:hover{
+  background: hsl(233, 100%, 60%, 0.7);
+  box-shadow: 0 5px 0 hsl(233, 100%, 60%, 0.7),
+              0 10px 20px hsl(233, 100%, 69%, 0.4);
+}
+
+footer .options a:hover,
+footer .social a:hover{
+  color: hsl(171, 66%, 44%);
+}
+
 /* General styling */
 body{
   max-width: 100vw;
